# PAUM

./: Main.py  README.md  Validation.py  pyproject.toml  requirements.txt
examples/: generate_synthetic_cloud.py
src/pointcloud_noise/: __init__.py  __main__.py  cli.py  io.py  params.py  scanner.py  simulators.py  visualize.py
tests/: test_simulators.py
